tests/integration/conformance/testdata/networking/destinationRule/basic/mcp.yaml
constraints:
  - collection: istio/networking/v1alpha3/destinationrules
    check:
    - exactlyOne:
      - equals: {
        "Body":{
          "host":"ratings.prod.svc.cluster.local",
          "subsets":[
          {
            "labels":{
              "version":"v1"
            },
            "name":"v1"
          },
          {
            "labels":{
              "version":"v2"
            },
            "name":"v2",
            "traffic_policy":{
              "load_balancer":{
                "simple":"ROUND_ROBIN"
              }
            }
          }
          ],
          "traffic_policy":{
            "port_level_settings":[
            {
              "load_balancer":{
                "simple":"LEAST_CONN"
              },
              "port":{
                "number":80
              }
            },
            {
              "load_balancer":{
                "simple":"ROUND_ROBIN"
              },
              "port":{
                "number":9080
              }
            }
            ]
          }
        },
        "Metadata":{
          "name":"{{.Namespace}}/bookinfo-ratings-port"
        },
        "TypeURL":"type.googleapis.com/istio.networking.v1alpha3.DestinationRule"
      }
